2019-07-06  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Fix some scan-build reports

	* libbalsa/mailbox.c (libbalsa_mailbox_set_threading_type),
	(libbalsa_mailbox_set_subject_gather),
	(libbalsa_mailbox_set_sort_type),
	(libbalsa_mailbox_set_sort_field), (libbalsa_mailbox_set_show),
	(libbalsa_mailbox_set_subscribe), (libbalsa_mailbox_set_exposed),
	(libbalsa_mailbox_set_open), (libbalsa_mailbox_set_filter):
	remove a dead store;
	* libbalsa/mailbox_imap.c
	(libbalsa_mailbox_imap_get_selected_handle): initialize readonly
	to FALSE.

2019-07-06  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mailbox-{remote,imap}: Simplify dispose() methods

	* libbalsa/mailbox_imap.c (libbalsa_mailbox_imap_dispose): the
	  server will be destroyed in the parent-class (LibBalsaMailboxRemote)
	  method;
	* libbalsa/mailbox_remote.c (libbalsa_mailbox_remote_dispose):
	  chain up to the parent-class (LibBalsaMailbox) method, to make
	  sure the mailbox is closed, before destroying the server.

2019-07-05  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mailbox-pop3: Declare it final

	Use G_DECLARE_FINAL_TYPE to declare LibBalsaMailboxPOP3, make it
	private, and provide necessary getters and setters.

	* libbalsa/mailbox_pop3.c
	(libbalsa_mailbox_pop3_get_delete_from_server),
	(libbalsa_mailbox_pop3_get_check),
	(libbalsa_mailbox_pop3_get_filter),
	(libbalsa_mailbox_pop3_get_filter_cmd),
	(libbalsa_mailbox_pop3_get_disable_apop),
	(libbalsa_mailbox_pop3_get_enable_pipe),
	(libbalsa_mailbox_pop3_set_msg_size_limit),
	(libbalsa_mailbox_pop3_set_check),
	(libbalsa_mailbox_pop3_set_disable_apop),
	(libbalsa_mailbox_pop3_set_delete_from_server),
	(libbalsa_mailbox_pop3_set_filter),
	(libbalsa_mailbox_pop3_set_filter_cmd),
	(libbalsa_mailbox_pop3_set_enable_pipe):
	* libbalsa/mailbox_pop3.h:
	* libinit_balsa/assistant_page_user.c (create_pop3_mbx):
	* src/mailbox-conf.c (update_pop_mailbox),
	(create_pop_mailbox_dialog):

2019-07-05  Peter Bloomfield  <pbloomfield@bellsouth.net>
